<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Hello World!"
        android:textSize="@dimen/title"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_form">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtxName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint" />

            <EditText
                android:id="@+id/edtxPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edtxTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_twitter" />

            <EditText
                android:id="@+id/edtxMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mail" />

            <Button
                android:id="@+id/btnSave"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveData"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnShow"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showData"
                android:text="@string/show" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registers"
                android:textSize="@dimen/subtitle" />

            <TextView
                android:id="@+id/txtRegistersContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
